Add some configuration

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,8 @@
             "options/*": ["./src/options/*"],
             "content/*": ["./src/content/*"],
             "assets/*": ["./src/assets/*"],
-            "components/*": ["./src/components/*"]
+            "components/*": ["./src/components/*"],
+            "types/*": ["./src/types/*"]
         }
     }
 }
