--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
         "@material-ui/core": "^4.11.4",
         "@material-ui/icons": "^4.11.2",
         "@types/chrome": "^0.0.136",
+        "@types/history": "^4.7.8",
         "@types/lodash": "^4.14.168",
         "@types/react": "^17.0.4",
         "@types/react-dom": "^17.0.3",
+        "@types/react-router-dom": "^5.1.7",
+        "@types/redux": "^3.6.0",
         "@typescript-eslint/eslint-plugin": "^4.22.0",
         "@typescript-eslint/parser": "^4.22.0",
         "clean-webpack-plugin": "^3.0.0",
@@ -33,11 +36,19 @@
         "eslint-plugin-react": "^7.23.2",
         "eslint-plugin-react-hooks": "^4.2.0",
         "eslint-webpack-plugin": "^2.5.4",
+        "formik": "^2.2.6",
         "html-webpack-plugin": "^5.3.1",
         "node-sass": "^5.0.0",
         "prop-types": "^15.7.2",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
+        "react-redux": "^7.2.4",
+        "react-router-dom": "^5.2.0",
+        "redux": "^4.1.0",
+        "redux-devtools-extension": "^2.13.9",
+        "redux-logger": "^3.0.6",
+        "redux-promise-middleware": "^6.1.2",
+        "redux-thunker": "^0.2.5",
         "sass-loader": "^11.0.1",
         "style-loader": "^2.0.0",
         "terser-webpack-plugin": "^5.1.1",
@@ -45,6 +56,7 @@
         "typescript": "^4.2.4",
         "webpack": "^5.36.1",
         "webpack-cli": "^4.6.0",
+        "yup": "^0.32.9",
         "zip-webpack-plugin": "^4.0.1"
     },
     "devDependencies": {
