--- a/package.json
+++ b/package.json
@@ -19,12 +19,11 @@
         "@types/react": "^17.0.4",
         "@types/react-dom": "^17.0.3",
         "@types/react-router-dom": "^5.1.7",
-        "@types/redux": "^3.6.0",
-        "@typescript-eslint/eslint-plugin": "^4.22.0",
-        "@typescript-eslint/parser": "^4.22.0",
+        "@types/redux": "^3.6.31",
+        "@typescript-eslint/eslint-plugin": "^4.22.1",
+        "@typescript-eslint/parser": "^4.22.1",
         "clean-webpack-plugin": "^3.0.0",
         "copy-webpack-plugin": "^8.1.1",
-        "core-js": "^3.11.1",
         "css-loader": "^5.2.4",
         "eslint": "^7.25.0",
         "eslint-config-airbnb": "^18.2.1",
@@ -54,7 +53,8 @@
         "terser-webpack-plugin": "^5.1.1",
         "ts-loader": "^9.1.1",
         "typescript": "^4.2.4",
-        "webpack": "^5.36.1",
+        "webextension-polyfill-ts": "^0.25.0",
+        "webpack": "^5.36.2",
         "webpack-cli": "^4.6.0",
         "yup": "^0.32.9",
         "zip-webpack-plugin": "^4.0.1"
