--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "@types/redux": "^3.6.31",
         "@typescript-eslint/eslint-plugin": "^4.22.1",
         "@typescript-eslint/parser": "^4.22.1",
+        "axios": "^0.21.1",
         "clean-webpack-plugin": "^3.0.0",
         "copy-webpack-plugin": "^8.1.1",
         "css-loader": "^5.2.4",
