--- a/src/manifest.json
+++ b/src/manifest.json
@@ -13,7 +13,7 @@
     "default_locale": "en",
     "content_scripts": [
         {
-            "matches": ["http://*/*", "https://*/*"],
+            "matches": ["http://*.notion.so/*", "https://*.notion.so/*"],
             "js": ["content/content.js"]
         }
     ],
@@ -21,11 +21,11 @@
         "scripts": ["background/background.js", "hotreload/hotreload.js"],
         "persistent": true
     },
-    "permissions": ["tabs", "storage", "http://*/*", "https://*/*"],
+    "permissions": ["tabs", "storage", "http://*.notion.so/*", "https://*.notion.so/*"],
     "options_ui": {
         "page": "options/index.html"
     },
-    "browser_action": {
+    "page_action": {
         "default_icon": {
             "16": "assets/icons/icon-16.png",
             "48": "assets/icons/icon-48.png"
