--- a/src/manifest-ff.json
+++ b/src/manifest-ff.json
@@ -17,7 +17,7 @@
     "background": {
         "scripts": ["background/background.js"]
     },
-    "permissions": ["tabs", "storage", "http://*.notion.so/*", "https://*.notion.so/*"],
+    "permissions": ["webNavigation", "http://*.notion.so/*", "https://*.notion.so/*"],
     "options_ui": {
         "page": "options/index.html"
     },
