--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "@material-ui/core": "^4.11.4",
         "@material-ui/icons": "^4.11.2",
         "@types/chrome": "^0.0.136",
+        "@types/jquery": "^3.5.5",
         "@types/lodash": "^4.14.168",
         "@types/react": "^17.0.4",
         "@types/react-dom": "^17.0.3",
@@ -37,6 +38,7 @@
         "eslint-webpack-plugin": "^2.5.4",
         "formik": "^2.2.6",
         "html-webpack-plugin": "^5.3.1",
+        "jquery": "^3.6.0",
         "node-sass": "^5.0.0",
         "prop-types": "^15.7.2",
         "react": "^17.0.2",
