--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "clean-webpack-plugin": "^3.0.0",
         "copy-webpack-plugin": "^8.1.1",
         "css-loader": "^5.2.4",
+        "dotenv": "^9.0.1",
         "eslint": "^7.25.0",
         "eslint-config-airbnb": "^18.2.1",
         "eslint-config-prettier": "^8.3.0",
