--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "eslint-plugin-react": "^7.23.2",
         "eslint-plugin-react-hooks": "^4.2.0",
         "eslint-webpack-plugin": "^2.5.4",
+        "firebase": "^8.6.0",
         "formik": "^2.2.6",
         "html-webpack-plugin": "^5.3.1",
         "jquery": "^3.6.0",
