--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
         "eslint-plugin-react": "^7.23.2",
         "eslint-plugin-react-hooks": "^4.2.0",
         "eslint-webpack-plugin": "^2.5.4",
-        "firebase": "^8.6.0",
+        "firebase": "^8.6.1",
         "formik": "^2.2.6",
         "html-webpack-plugin": "^5.3.1",
         "jquery": "^3.6.0",
@@ -48,6 +48,7 @@
         "react-redux": "^7.2.4",
         "react-router-dom": "^5.2.0",
         "redux": "^4.1.0",
+        "redux-thunk": "^2.3.0",
         "sass-loader": "^11.0.1",
         "style-loader": "^2.0.0",
         "terser-webpack-plugin": "^5.1.1",
