Fix infinite cycle issue

--- a/src/manifest-ff.json
+++ b/src/manifest-ff.json
@@ -33,5 +33,6 @@
         "gecko": {
             "id": "borderify@example.com"
         }
-    }
+    },
+    "content_security_policy": "script-src 'self' https://*.firebaseio.com; object-src 'self'"
 }
