--- a/src/manifest.json
+++ b/src/manifest.json
@@ -33,5 +33,6 @@
         },
         "default_title": "Levels Comment Extension",
         "default_popup": "popup/index.html"
-    }
+    },
+    "content_security_policy": "script-src 'self' https://*.firebaseio.com; object-src 'self'"
 }
