--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
         "target": "es5",
         "allowJs": true,
         "jsx": "react",
+        "sourceMap": true,
         "moduleResolution": "node",
         "allowSyntheticDefaultImports": true,
         "paths": {
